--- a/JS/index.html
+++ b/JS/index.html
@@ -25,7 +25,8 @@
 
             <label>RE-ENTER YOUR PASSWORD </label>
             <input type="password"><br><br>
-            <input type="submit">
+            <!-- <input class="button" type="submit"><br> -->
+            <button type="submit">Submit 
             <button type="submit">sign-in</button>
         </form>
         </div>
